--- a/index.html
+++ b/index.html
@@ -11,5 +11,9 @@
         <h1>Ana Júlia</h1>
         <p>Estudante do curso técnico de Desenvolvimento de Sistemas</p>
     </header>
+
+    <main>
+        
+    </main>
 </body>
 </html>
