Feat: Finish about section

--- a/index.html
+++ b/index.html
@@ -13,6 +13,11 @@
     </header>
 
     <main>
+        <section id="sobre-mim">
+            <h3 id= "titulo-sobre-mim">Sobre Mim</h3>
+            <p class="texto-sobre-mim">Vai São Paulo! ❤️🤍🖤</p>
+            <p class="texto-sobre-mim">Ds é o melhor curso do SENAI Valinhos</p>
+        </section>
         
     </main>
 </body>
