--- a/index.html
+++ b/index.html
@@ -18,6 +18,15 @@
             <p class="texto-sobre-mim">Vai São Paulo! ❤️🤍🖤</p>
             <p class="texto-sobre-mim">Ds é o melhor curso do SENAI Valinhos</p>
         </section>
+        <section id="meus-hobbies">
+            <h3 id= "titulo-meus-hobbies">Meu Hobbies</h3>
+            <ul>
+                <li>📽️Assistir filme e séries</li>
+                <li>📚Ler livros</li>
+                <li>🌊Ir para a praia</li>
+                <li>🎧Ouvir música</li>
+            </ul>
+        </section>
         
     </main>
 </body>
