Feat: finaliza a sessão contato

--- a/index.html
+++ b/index.html
@@ -22,12 +22,18 @@
             <h3 id= "titulo-meus-hobbies">Meu Hobbies</h3>
             <ul>
                 <li>📽️Assistir filme e séries</li>
-                <li>📚Ler livros</li>
+                <li>📚Ler</li>
                 <li>🌊Ir para a praia</li>
                 <li>🎧Ouvir música</li>
             </ul>
         </section>
         
+        <section id="contato">
+        <h3>Entre em Contato</h3>
+        <p>Quer conversar sobre tecnologia? Me encontre no <a href="https://github.com/Anajubf" target="_blank">Github</a> ou
+        <a href="https://www.linkedin.com/in/ana-j%C3%BAlia-baggio-ferreira-15517634b/" target="_blank">Linkedin</a>
+    </p>
+        </section>
     </main>
 </body>
 </html>
