Feat: finaliza o footer e o site

--- a/index.html
+++ b/index.html
@@ -35,5 +35,8 @@
     </p>
         </section>
     </main>
+    <footer>
+        <p>2025 Ana Júlia - Minha Primeira Página Web! Hahahaha</p>
+    </footer>
 </body>
 </html>
